--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: kitagawa
 Type: Package
 Title: Model the spectral response of a closed water-well to harmonic
         strains at seismic frequencies.
-Version: 1.0-1
-Date: 2012-10-23
+Version: 1.1-1
+Date: 2013-03-12
 Author: Andrew J Barbour
 Maintainer: Andrew J Barbour <andy.barbour@gmail.com>
 Description: Provides tools to calculate what the theoretical
@@ -14,9 +14,11 @@ Description: Provides tools to calculate what the theoretical
         the name of the package.
 License: GPL (>= 2)
 URL: http://abarbour.github.com/kitagawa/
-Depends: R (>= 2.10.1), kelvin (>= 1.1-0)
+Depends: R (>= 2.10.1), kelvin (>= 1.2-0)
 Collate: 'kitagawa-package.R' 'well_response.R' 'sensing_volume.R'
         'kitplot.R' 'omega_constants.R' 'alpha_constants.R' 'nullchk.R'
-Packaged: 2012-10-25 22:32:50 UTC; abarbour
+        'zzz.R'
+Packaged: 2013-03-12 17:10:21 UTC; abarbour
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-10-26 06:07:47
+Date/Publication: 2013-03-12 18:29:16
